--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,8 +9,41 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --faded-pink: #F1B2CE;
+  --purple: #DB00FF;
+  --crimson: #FF0070;
+  --transparent-crimson: rgb(255 0 112 / 0.4);
+  --dark-blue: #000028;
+  --bg-dark: url(../images/cover-image-dark.png);
 }
 
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+  --bg-color: #000028;;
+  --bg-image: url(../images/cover-image-dark.png);;
+  --header-heading-color: #DB00FF;
+  --button-text-color: #FF0070;
+  --accent-color: #FF0070;
+  --text-color: #F1B2CE;
+  --border-color: #FF0070;
+  --hover-border-color: rgb(255 0 112 / 0.4);
+  --title-decor-color: #000028;;
+  --text-decor-color: #FF0070;
+  --dot-decor-color: #FF0070;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg-color: #000028;;
+    --bg-image: url(../images/cover-image-dark.png);;
+    --header-heading-color: #DB00FF;
+    --button-text-color: #FF0070;
+    --accent-color: #FF0070;
+    --text-color: #F1B2CE;
+    --border-color: #FF0070;
+    --hover-border-color: rgb(255 0 112 / 0.4);
+    --title-decor-color: #000028;;
+    --text-decor-color: #FF0070;
+    --dot-decor-color: #FF0070;
+  }
 }
