--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,28 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-color: #FFF1F7;
+  --bg-image: url(../images/cover-image-light.png);
+  --button-text-color: #353430;
+  --header-heading-color: #FFC2E6;
+  --accent-color: #FF8DCB;
+  --text-color: #353430;
+  --border-color: #353430;
+  --hover-border-color: rgb(53 52 48 / 0.4);
+  --title-decor-color: #353430;
+  --text-decor-color: transparent;
 }
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+  --bg-color: #FFF1F7;
+  --bg-image: url(../images/cover-image-light.png);
+  --button-text-color: #353430;
+  --header-heading-color: #FFC2E6;
+  --accent-color: #FF8DCB;
+  --text-color: #353430;
+  --border-color: #353430;
+  --hover-border-color: rgb(53 52 48 / 0.4);
+  --title-decor-color: #353430;
+  --text-decor-color: transparent;
 }
