--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,169 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
+.header {
+  margin-bottom: 13.49%;
+}
+
+.header-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+@media (min-width: 768px) {
+  .header {
+    margin-bottom: 10.49%;
+  }
+
+  .header-grid {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1.789fr;
+  }
+
+  .header__theme-menu {
+    grid-column: 2;
+    margin-block-start: 32.98%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header {
+    margin-bottom: 7.7%;
+  }
+  .header__theme-menu {
+    grid-column: 1/3;
+    margin-block-start: -4.3%;
+    margin-inline: 38.8%;
+  }
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: row;
+  margin-top: min(10.3%, 12%);
+}
+
+@media (min-width: 768px) {
+  .header__theme-menu-list {
+    margin-block-start: 18.9px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .header__theme-menu-list {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .header__theme-menu-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+.header__theme-menu-item {
+  list-style: none;
+  margin-right: 10px;
+}
+
+@media (min-width: 768px) {
+  .header__theme-menu-item {
+    margin-right: 20px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header__theme-menu-item {
+    margin-right: 12px;
+    margin-block: -1px;
+  }
+}
+
+.header__theme-menu-button {
+  background-color: transparent;
+  border: none;
+  font-family: "IBM Plex mono", sans-serif;
+  font-weight: normal;
+  padding: 1.2px 12.3px;
+  text-transform: lowercase;
+  font-size: 18px;
+  color: var(--button-text-color);
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--hover-border-color);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--border-color);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--button-text-color);
+}
+
+.header__theme-menu-button_active:disabled {
+  color: var(--button-text-color);
+  pointer-events: none;
+}
+
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  font-family: "IBM Plex Mono";
+  font-size: 18px;
+  background-color: var(--bg-color);
+  background-position: center;
+  background-image: var(--bg-image);
+  color: var(--text-color);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  font-weight: var(--font-weight-lv);
 }
+
+.main-text {
+  display: grid;
+  gap: 20px;
+}
+
+@media (min-width: 768px) {
+  .main-text {
+    column-gap: 40px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .main-text {
+    column-gap: 21px;
+  }
+}
+
+.main {
+  padding: 0 var(--margin);
+}
+
+.main_heading {
+  font-weight: var(--font-weight-vll);
+  font-size: var(--font-size);
+}
+
+.main a {
+  text-decoration: none;
+  color: var(--text-color);
+  text-shadow: 2px 1px var(--accent-color);
+}
+
+.main a:hover {
+  border-bottom: 1px var(--border-color) solid;
+}
+
+.main a:focus {
+  outline: none;
+}
+
+.main a:focus-visible {
+  outline: 1px solid var(--border-color);
+}
+
