--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,34 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --bg-color: #FFF1F7;
+  --bg-image: url(../images/cover-image-light.png);
+  --button-text-color: #353430;
+  --header-heading-color: #FFC2E6;
+  --accent-color: #FF8DCB;
+  --text-color: #353430;
+  --border-color: #353430;
+  --hover-border-color: rgb(53 52 48 / 0.4);
+  --title-decor-color: #353430;
+  --text-decor-color: transparent;
+  --title-heading-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --font-weight-lv: 400;
+  --font-weight-vll: 700;
+  --font-size: 18px;
+  --margin: 10px;
+}
+
+@media (min-width: 768px) {
+  :root {
+    --margin: 20px;
+  }
+}
+
+@media (min-width: 1024px) {
+  :root {
+    --margin: 21px;
+    --title-heading-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+}
