--- a/styles/light.css
+++ b/styles/light.css
@@ -9,11 +9,11 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --bg-color: #FFF1F7;
+  --bg-color: #fff1f7;
   --bg-image: url(../images/cover-image-light.png);
   --button-text-color: #353430;
-  --header-heading-color: #FFC2E6;
-  --accent-color: #FF8DCB;
+  --header-heading-color: #ffc2e6;
+  --accent-color: #ff8dcb;
   --text-color: #353430;
   --border-color: #353430;
   --hover-border-color: rgb(53 52 48 / 0.4);
@@ -23,11 +23,11 @@
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
-  --bg-color: #FFF1F7;
+  --bg-color: #fff1f7;
   --bg-image: url(../images/cover-image-light.png);
   --button-text-color: #353430;
-  --header-heading-color: #FFC2E6;
-  --accent-color: #FF8DCB;
+  --header-heading-color: #ffc2e6;
+  --accent-color: #ff8dcb;
   --text-color: #353430;
   --border-color: #353430;
   --hover-border-color: rgb(53 52 48 / 0.4);
