--- a/styles/diffrent-sizes/latop.css
+++ b/styles/diffrent-sizes/latop.css
@@ -1,6 +1,8 @@
 @media (min-width: 1024px) {
   .header {
-    margin-bottom: 7.7%;
+    margin-bottom: 78.7%;
+    height: 0;
+    min-height: 0;
   }
   .header__theme-menu {
     grid-column: 1/3;
