--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .header {
-  margin-bottom: 13.49%;
-  width: 100vw;
+  height: 83vmax;
+  min-height: 697px;
 }
 
 .header-grid {
@@ -10,32 +10,6 @@
   grid-template-columns: 1fr;
 }
 
-@media (min-width: 768px) {
-  .header {
-    margin-bottom: 10.49%;
-  }
-
-  .header-grid {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1.789fr;
-  }
-
-  .header__theme-menu {
-    grid-column: 2;
-    margin-block-start: 32.98%;
-  }
-}
-
-@media (min-width: 1024px) {
-  .header {
-    margin-bottom: 7.7%;
-  }
-  .header__theme-menu {
-    grid-column: 1/3;
-    margin-block-start: -4.3%;
-    margin-inline: 38.8%;
-  }
-}
 
 .header__theme-menu-list {
   display: flex;
@@ -131,7 +105,7 @@
 
 @media (min-width: 768px) {
   .main-text {
-    column-gap: 40px;
+    column-gap: 41px;
   }
 }
 
@@ -169,5 +143,5 @@
 }
 
 .footer {
-  width: 100vw;
+  height: 79vh;
 }
