Подгоняла вёрстку с макетом

--- a/styles/diffrent-sizes/tablet.css
+++ b/styles/diffrent-sizes/tablet.css
@@ -10,7 +10,11 @@
 
   .header__theme-menu {
     grid-column: 2;
-    margin-block-start: 32.98%;
+    margin-block-start: 32.94%;
   }
 
+  .main-text {
+    column-gap: 19.5px;
+    row-gap: 19.9px;
+  }
 }
