--- a/styles/section.css
+++ b/styles/section.css
@@ -1,10 +1,17 @@
 .paragraph:nth-of-type(2n):not(:nth-of-type(2n + 4)) {
-  margin-bottom: 29px;
+	margin-bottom: 30.55px;
 }
 
 .paragraph:nth-of-type(5n) {
-  margin-bottom: 29px;
+  margin-bottom: 29.99px;
 }
+
+@media (min-width: 768px) and (max-width: 1023px) {
+	.paragraph_margin-left {
+		margin-left: 7px;
+	}
+}
+
 /* Стили для планшета */
 @media (min-width: 768px) {
   .main-text {
@@ -12,7 +19,7 @@
   }
 
   .paragraph:nth-of-type(2n):not(:nth-of-type(2n + 4)) {
-		margin-bottom: 13.2%;
+		margin-bottom: 13.19%;
   }
 
   .paragraph:nth-of-type(5n) {
@@ -81,11 +88,11 @@
 /* Стили для ноутбука */
 @media (min-width: 1024px) {
   .paragraph:nth-of-type(2n):not(:nth-of-type(2n + 4)) {
-    margin-bottom: 9.39%;
+    margin-bottom: 9.5%;
   }
 
   .paragraph:nth-of-type(5n) {
-    margin-bottom: 18.9%;
+		margin-bottom: 18.99%;
   }
 
   .paragraph:nth-of-type(3) {
