--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,10 +1,7 @@
-.section_gallery {
-  margin-top: 18.7px;
-}
-
 .gallery {
+	margin-top: 19.7px;
   display: grid;
-  gap: 4px;
+  gap: 5px;
   margin-bottom: 47px;
 }
 
@@ -14,45 +11,45 @@
   object-fit: cover;
 }
 
+
 @media (min-width: 768px) {
   .gallery {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 0.5fr 0.5fr 1fr;
-    gap: 25px 22px;
-    margin-bottom: 9.3%;
+    grid-template-rows: 0fr 0.5fr 0.5fr 1fr;
+    gap: 17.7px 20px;
+		margin-bottom: 9.9%;
+		margin-top: 41.7px;;
   }
+
+	.gallery_title-decor {
+		grid-row: 1;
+		grid-column: 1/4;
+	}
 
   .image:nth-of-type(1) {
     grid-column: 1/3;
-    grid-row: 1;
+    grid-row: 2;
   }
 
-  .image:nth-of-type(2) {
+	.image:nth-of-type(2) {
     grid-column: 3;
-    grid-row: 1/3;
-  }
-
-  .image:nth-of-type(3) {
     grid-row: 2/4;
   }
 
-  .image:nth-of-type(5) {
-    grid-row: 3;
-    grid-column: 2/4;
+  .image:nth-of-type(3) {
+    grid-row: 3/5;
   }
 
-  .section_gallery {
-    margin-block: 5.9%;
+  .image:nth-of-type(5) {
+    grid-row: 4;
+    grid-column: 2/4;
   }
 }
 
 @media (min-width: 1024px) {
-  .section_gallery {
-    margin-block: -4.4%;
-  }
-
   .gallery {
-    gap: 22px 20px;
-    margin-bottom: 11.59%;
+    gap: 15px 20px;
+    margin-bottom: 8%;
+    margin-top: -42px;
   }
 }
