--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,9 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
+.header {
+  margin-bottom: 51px;
+}
+
 .header-grid {
   display: grid;
   grid-template-columns: 1fr;
