--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,8 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .header {
-  margin-bottom: 51px;
+  margin-bottom: 50.77px;
+  height: 100vh;
 }
 
 .header-grid {
@@ -127,4 +128,8 @@
 
 .main a:focus-visible {
   outline: 1px solid var(--border-color);
+}
+
+.footer {
+  height: 100vh;
 }
