Подправила размер для телефона

--- a/styles/headings_and_decors.css
+++ b/styles/headings_and_decors.css
@@ -69,7 +69,7 @@
 h2[class="header_heading"] {
   display: flex;
   justify-self: center;
-  margin: 66.8% 0;
+	margin: 66.8% 0px;
 }
 
 h4[class="title-decor"] {
