--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,16 +9,6 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --faded-pink: #f1b2ce;
-  --purple: #db00ff;
-  --crimson: #ff0070;
-  --transparent-crimson: rgb(255 0 112 / 0.4);
-  --dark-blue: #000028;
-  --bg-dark: url(../images/cover-image-dark.png);
-}
-
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
   --bg-color: #000028;
   --bg-image: url(../images/cover-image-dark.png);
   --header-heading-color: #db00ff;
@@ -30,6 +20,7 @@
   --title-decor-color: #000028;
   --text-decor-color: #ff0070;
   --dot-decor-color: #ff0070;
+  --section-heading-color: #ff0070;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -45,5 +36,6 @@
     --title-decor-color: #000028;
     --text-decor-color: #ff0070;
     --dot-decor-color: #ff0070;
+    --section-heading-color: #ff0070;
   }
 }
