--- a/styles/diffrent-sizes/tablet.css
+++ b/styles/diffrent-sizes/tablet.css
@@ -1,7 +1,6 @@
 @media (min-width: 768px) {
   .header {
-    margin-bottom: 5.2%;
-    min-height: 1024px;
+    padding: 20px;
   }
 
   .header-grid {
@@ -12,6 +11,10 @@
   .header__theme-menu {
     grid-column: 2;
     margin-block-start: 32.94%;
+  }
+
+  .main {
+    padding: 60px 20px;
   }
 
   .main-text {
