--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,8 +1,6 @@
 .gallery {
-	margin-top: 21.1px;
   display: grid;
-  gap: 5px;
-  margin-bottom: 49px;
+  gap: 10px;
 }
 
 .gallery_image {
@@ -26,21 +24,21 @@
 		grid-column: 1/4;
 	}
 
-  .image:nth-of-type(1) {
+  .gallery_image:nth-of-type(1) {
     grid-column: 1/3;
     grid-row: 2;
   }
 
-	.image:nth-of-type(2) {
+	.gallery_image:nth-of-type(2) {
     grid-column: 3;
     grid-row: 2/4;
   }
 
-  .image:nth-of-type(3) {
+  .gallery_image:nth-of-type(3) {
     grid-row: 3/5;
   }
 
-  .image:nth-of-type(5) {
+  .gallery_image:nth-of-type(5) {
     grid-row: 4;
     grid-column: 2/4;
   }
