--- a/styles/headings_and_decors.css
+++ b/styles/headings_and_decors.css
@@ -4,10 +4,9 @@
   border: var(--border-color) 1px;
   width: 25px;
   height: 25px;
-  margin-top: var(--margin);
-  margin-right: var(--margin);
   margin-inline-start: auto;
   border-style: solid solid none none;
+  position: absolute;
 }
 
 .decorated-zone::after {
@@ -17,8 +16,6 @@
   border-style: none none solid solid;
   width: 25px;
   height: 25px;
-  margin-bottom: var(--margin);
-  margin-left: var(--margin);
 }
 
 .text-decor {
@@ -57,7 +54,7 @@
 	}
 }
 
-.header_heading {
+.title-heading {
   font-size: var(--title-heading-size);
   text-shadow: 4px 4px 0px var(--accent-color);
   color: var(--header-heading-color);
@@ -66,7 +63,7 @@
   line-height: 0.82em;
 }
 
-h2[class="header_heading"] {
+h2[class="title-heading"] {
   display: flex;
   justify-self: center;
 	margin: 66.8% 0px;
@@ -77,7 +74,7 @@ h4[class="title-decor"] {
 }
 
 .title-decor.title-decor_margin-bottom {
-  margin-bottom: 20px;
+  margin-bottom: 1.3px;
 }
 
 .header_title {
@@ -103,7 +100,7 @@ h4[class="title-decor"] {
 }
 
 @media (min-width: 768px) {
-  .header_heading {
+  .title-heading {
     margin: 22.8% 0 14.6% 0px;
     grid-column: 1/3;
   }
@@ -117,7 +114,7 @@ h4[class="title-decor"] {
     margin-inline: 0 var(--margin);
   }
 
-  h2[class="header_heading"] {
+  h2[class="title-heading"] {
     margin: 54.3% 0px;
   }
 
@@ -127,7 +124,7 @@ h4[class="title-decor"] {
 }
 
 @media (min-width: 1024px) {
-  .header_heading {
+  .title-heading {
     margin: 8.4% 0 11.5% 0px;
   }
 
@@ -135,7 +132,7 @@ h4[class="title-decor"] {
     margin-bottom: 17.5%;
   }
 
-  h2[class="header_heading"] {
+  h2[class="title-heading"] {
     margin: 26.8% 0px;
   }
 }
