--- a/styles/section.css
+++ b/styles/section.css
@@ -1,146 +1,32 @@
-.paragraph:nth-of-type(2n):not(:nth-of-type(2n + 4)) {
-	margin-bottom: 29.99px;
-}
-
-.paragraph:nth-of-type(5n) {
-	margin-bottom: 27.1px;
-}
-
-@media (min-width: 768px) and (max-width: 1023px) {
-	.paragraph_margin-left {
-		margin-left: 7px;
-	}
-}
-
-/* Стили для планшета */
-@media (min-width: 768px) {
-  .main-text {
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  .paragraph:nth-of-type(2n):not(:nth-of-type(2n + 4)) {
-		margin-bottom: 13.19%;
-  }
-
-  .paragraph:nth-of-type(5n) {
-		margin-bottom: 8.29%;
-  }
-
-  .paragraph:nth-of-type(1) {
-    grid-column: 2/4;
-  }
-
-  .paragraph:nth-of-type(2) {
-    grid-column: 2/4;
-  }
-
-  .main_heading:nth-of-type(2) {
-    grid-column: 1;
-    grid-row: 3;
-  }
-
-  .paragraph:nth-of-type(3) {
-    grid-row: 4;
-    grid-column: 1/4;
-  }
-
-  .paragraph:nth-of-type(4) {
-    grid-column: 1/4;
-    grid-row: 5;
-  }
-
-  .paragraph:nth-of-type(5) {
-    grid-column: 1/4;
-    grid-row: 6;
-  }
-
-  .main_heading:nth-of-type(3) {
-    grid-column: 1;
-    grid-row: 7;
-  }
-
-  .paragraph:nth-of-type(6) {
-    grid-column: 2/4;
-    grid-row: 7;
-  }
-
-  .paragraph:nth-of-type(7) {
-    grid-column: 2/4;
-    grid-row: 8;
-  }
-
-  .paragraph:nth-of-type(8) {
-    grid-column: 2/4;
-    grid-row: 9;
-  }
-
-  .paragraph:nth-of-type(9) {
-    grid-column: 2/4;
-    grid-row: 10;
-  }
-
-  .paragraph:nth-of-type(10) {
-    grid-column: 2/4;
-    grid-row: 11;
-  }
-}
-
-/* Стили для ноутбука */
-@media (min-width: 1024px) {
-  .paragraph:nth-of-type(2n):not(:nth-of-type(2n + 4)) {
-    margin-bottom: 9.5%;
-  }
-
-  .paragraph:nth-of-type(5n) {
-		margin-bottom: 18.99%;
-  }
-
-  .paragraph:nth-of-type(3) {
-    grid-row: 4;
-    grid-column: 1;
-  }
-
-  .paragraph:nth-of-type(4) {
-    grid-column: 2;
-    grid-row: 4;
-  }
-
-  .paragraph:nth-of-type(5) {
-    grid-column: 3;
-    grid-row: 4;
-  }
-
-  .main_heading:nth-of-type(3) {
-    grid-column: 1;
-    grid-row: 5;
-  }
-
-  .paragraph:nth-of-type(6) {
-    grid-column: 2/4;
-    grid-row: 5;
-  }
-
-  .paragraph:nth-of-type(7) {
-    grid-column: 2/4;
-    grid-row: 6;
-  }
-
-  .paragraph:nth-of-type(8) {
-    grid-column: 2/4;
-    grid-row: 7;
-  }
-
-  .paragraph:nth-of-type(9) {
-    grid-column: 2/4;
-    grid-row: 8;
-  }
-
-  .paragraph:nth-of-type(10) {
-    grid-column: 2/4;
-    grid-row: 9;
-  }
+.section {
+  display: grid;
+  row-gap: 20px;
+  margin-bottom: 49.79px;
 }
 
 .paragraph_line-height {
-  line-height: 1.3em;
+  line-height: 1.299em;
+}
+
+@media (min-width: 768px) {
+  .section {
+    align-items: start;
+    column-gap: 32px;
+    margin-bottom: 82.9px;
+  }
+
+  .card-column {
+    grid-column: 2/4;
+  }
+
+  .card-adataption {
+    grid-column: 1/4;
+  }
+}
+
+@media (min-width: 1024px) {
+  .card-adataption {
+    grid-column: inherit;
+    grid-row: 2;
+  }
 }
