--- a/styles/diffrent-sizes/tablet.css
+++ b/styles/diffrent-sizes/tablet.css
@@ -1,8 +1,4 @@
 @media (min-width: 768px) {
-  .header {
-    padding: 20px;
-  }
-
   .header-grid {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1.789fr;
@@ -10,7 +6,7 @@
 
   .header__theme-menu {
     grid-column: 2;
-    margin-block-start: 32.94%;
+    margin-block-start: 0;
   }
 
   .main {
