--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,6 +1,6 @@
 .gallery {
   display: grid;
-  gap: 10px;
+  gap: 9px;
 }
 
 .gallery_image {
@@ -9,27 +9,26 @@
   object-fit: cover;
 }
 
-
 @media (min-width: 768px) {
   .gallery {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 0fr 0.5fr 0.5fr 1fr;
     gap: 17.7px 20px;
-		margin-bottom: 9.9%;
-		margin-top: 41.7px;;
+    margin-bottom: 9.9%;
+    margin-top: 41.7px;
   }
 
-	.gallery_title-decor {
-		grid-row: 1;
-		grid-column: 1/4;
-	}
+  .gallery_title-decor {
+    grid-row: 1;
+    grid-column: 1/4;
+  }
 
   .gallery_image:nth-of-type(1) {
     grid-column: 1/3;
     grid-row: 2;
   }
 
-	.gallery_image:nth-of-type(2) {
+  .gallery_image:nth-of-type(2) {
     grid-column: 3;
     grid-row: 2/4;
   }
