--- a/styles/diffrent-sizes/latop.css
+++ b/styles/diffrent-sizes/latop.css
@@ -1,13 +1,21 @@
 @media (min-width: 1024px) {
+  .header {
+    max-height: 768px;
+  }
+
   .header__theme-menu {
-    grid-column: 1/3;
-    margin-block: -3.9px;
-    margin-inline: 38.8%;
+    grid-column: 1 / 3;
+    margin-block: -28.9px;
+    margin-inline: 38.3%;
   }
 
   .header__theme-menu-item {
-    margin-right: 9.99px;
+    margin-right: 11px;
     margin-block: -1px;
+  }
+
+  .main {
+    padding: 60px 20px;
   }
 
   .main-text {
