--- a/styles/headings_and_decors.css
+++ b/styles/headings_and_decors.css
@@ -26,8 +26,8 @@
 .text-decor::before {
   content: "rec";
   position: absolute;
-  inset-inline-end: 35px;
-  inset-block-end: 0;
+  inset-inline-end: 28px;
+  margin-block: -25px;
   text-transform: uppercase;
 }
 
@@ -35,22 +35,25 @@
   content: "";
   display: block;
   position: absolute;
-  inset-inline-end: 19px;
-  inset-block-end: 5px;
+  inset-inline-end: 9px;
+  inset-block-end: 8px;
   border-radius: 10px;
   width: 9px;
   height: 9px;
   background-color: var(--dot-decor-color);
   box-shadow: 0px 0px 4px 2px var(--dot-decor-color);
+  bottom: 20px;
+  left: 20px;
 }
 
 @media (min-width: 768px) {
   .text-decor::before {
-    inset-inline-end: 45px;
+    inset-inline-end: 29px;
+    margin-block: -23.5px;
   }
 
   .text-decor::after {
-    inset-inline-end: 29px;
+    inset-inline-end: 10px;
   }
 }
 
@@ -59,17 +62,23 @@
   text-shadow: 4px 4px 0px var(--accent-color);
   color: var(--header-heading-color);
   font-weight: var(--font-weight-vll);
-  margin-block: 57px;
+  margin-block: 66.5px 54.8px;
   line-height: 0.82em;
 }
 
-h2[class="title-heading"] {
+.title-heading_justify-center {
   display: flex;
   justify-self: center;
   margin: 70.8% 0px;
 }
 
-h4[class="title-decor"] {
+.section_heading {
+  font-weight: var(--font-weight-vll);
+  font-size: var(--font-size);
+  color: var(--section-heading-color);
+}
+
+.title-decor.title-decor_unbolding {
   font-weight: var(--font-weight-lv);
 }
 
@@ -86,56 +95,60 @@ h4[class="title-decor"] {
   font-weight: var(--font-weight-vll);
   color: var(--title-decor-color);
   font-size: var(--font-size);
-  margin-bottom: 10px;
+  margin-block-end: 9.9px;
 }
 
 .header_title.title-decor {
-  margin-bottom: 8.2%;
   line-height: 1.3em;
+  margin-block-end: 30.9px;
+  align-self: end;
 }
 
 .title-decor.gallery_title-decor {
   margin-bottom: 0;
 }
 
+.section_heading-margin-bottom {
+  margin-bottom: 19px;
+}
+
 @media (min-width: 768px) {
   .title-heading {
-    margin: 173px -20px 163px;
+    margin-inline: -20px;
     grid-column: 1/3;
+    margin-block: 0;
   }
 
   .text-decor {
     grid-column: 2;
     grid-row: 1;
   }
+
+  .section_heading-margin-bottom {
+    margin-bottom: 20.9px;
+  }
+
   .header_title {
     grid-column: 2/3;
     margin-inline: 0 var(--margin);
   }
 
-  h2[class="title-heading"] {
+  .title-heading_justify-center {
     margin: 54.3% 0px;
-  }
-
-  .header_title.title-decor {
-    margin-bottom: 0;
   }
 }
 
 @media (min-width: 1024px) {
-  .title-heading {
-    margin: 0;
+
+  .title-heading_justify-center {
+    margin: 47.6% 0px 416px;
   }
 
   .header_title.title-decor {
-    margin-bottom: 17.5%;
+    margin-block-end: initial;
   }
 
-  h2[class="title-heading"] {
-    margin: 26.8% 0px;
-  }
-
-  .section_heading-margin-block {
-    margin-block-end: 20px;
+  .section_heading-margin-bottom {
+    margin-bottom: 20px;
   }
 }
