--- a/styles/headings_and_decors.css
+++ b/styles/headings_and_decors.css
@@ -145,7 +145,7 @@
   }
 
   .header_title.title-decor {
-    margin-block-end: initial;
+    margin-block-end: 9.9px;
   }
 
   .section_heading-margin-bottom {
