--- a/styles/headings_and_decors.css
+++ b/styles/headings_and_decors.css
@@ -4,8 +4,10 @@
   border: var(--border-color) 1px;
   width: 25px;
   height: 25px;
-  margin-inline-start: auto;
   border-style: solid solid none none;
+  position: absolute;
+  top: var(--padding);
+  right: var(--padding);
 }
 
 .decorated-zone::after {
@@ -16,10 +18,11 @@
   width: 25px;
   height: 25px;
   position: absolute;
+  bottom: var(--padding);
+  left: var(--padding);
 }
 
 .text-decor {
-  position: relative;
   color: var(--text-decor-color);
 }
 
@@ -29,6 +32,8 @@
   inset-inline-end: 28px;
   margin-block: -25px;
   text-transform: uppercase;
+  top: 35px;
+  right: 38.7px;
 }
 
 .text-decor::after {
@@ -42,18 +47,25 @@
   height: 9px;
   background-color: var(--dot-decor-color);
   box-shadow: 0px 0px 4px 2px var(--dot-decor-color);
-  bottom: 20px;
-  left: 20px;
+  top: 17.8px;
+  right: 19px;
 }
 
 @media (min-width: 768px) {
   .text-decor::before {
-    inset-inline-end: 29px;
-    margin-block: -23.5px;
+    inset-inline-end: 47.9px;
+    margin-block-start: -15px;
   }
 
   .text-decor::after {
-    inset-inline-end: 10px;
+    inset-inline-end: 29.2px;
+    inset-block-start: 28px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .decorated-zone::after {
+    bottom: 22px;
   }
 }
 
@@ -62,14 +74,16 @@
   text-shadow: 4px 4px 0px var(--accent-color);
   color: var(--header-heading-color);
   font-weight: var(--font-weight-vll);
-  margin-block: 66.5px 54.8px;
   line-height: 0.82em;
+  justify-self: start;
+  align-self: start;
+  margin-block-start: 25px;
 }
 
-.title-heading_justify-center {
-  display: flex;
+.footer_title-heading {
   justify-self: center;
-  margin: 70.8% 0px;
+  align-self: center;
+  margin-block: 8px 0;
 }
 
 .section_heading {
@@ -100,7 +114,7 @@
 
 .header_title.title-decor {
   line-height: 1.3em;
-  margin-block-end: 30.9px;
+  margin-block-end: 55px;
   align-self: end;
 }
 
@@ -109,19 +123,22 @@
 }
 
 .section_heading-margin-bottom {
-  margin-bottom: 19px;
+  margin-bottom: 19.99px;
 }
 
 @media (min-width: 768px) {
-  .title-heading {
+  .header_title-heading {
     margin-inline: -20px;
-    grid-column: 1/3;
+    grid-column: 1 / 4;
     margin-block: 0;
+    grid-row: 2;
   }
 
-  .text-decor {
-    grid-column: 2;
-    grid-row: 1;
+  .header_title.title-decor {
+    align-self: center;
+    grid-column: 3;
+    margin-block: 0 5px;
+    grid-row: 3;
   }
 
   .section_heading-margin-bottom {
@@ -134,21 +151,24 @@
   }
 
   .title-heading_justify-center {
-    margin: 54.3% 0px;
+    margin: 0;
+  }
+
+  .footer_title-heading {
+    margin-block: 0;
   }
 }
 
 @media (min-width: 1024px) {
-
-  .title-heading_justify-center {
-    margin: 47.6% 0px 416px;
-  }
-
   .header_title.title-decor {
-    margin-block-end: 9.9px;
+    margin-block: 0 3px;
   }
 
   .section_heading-margin-bottom {
     margin-bottom: 20px;
+  }
+
+  .footer_title-heading {
+    margin-block: 0px 4px;
   }
 }
